objects/apsona__apsona_item__c.object
<CustomObject>
    <description>Apsona-specific content</description>
    <fields>
        <fullName>apsona__Checkbox_00__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apsona__Checkbox_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 01</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apsona__Checkbox_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 02</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apsona__Content1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>apsona__Content2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>apsona__Content3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>apsona__Date_00__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date_00</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>apsona__Date_01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date_01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>apsona__Date_02__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date_02</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>apsona__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>apsona__Entity_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apsona__Item_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apsona__Number_00__c</fullName>
        <label>Number_00</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>apsona__Number_01__c</fullName>
        <label>Number_01</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>apsona__Number_02__c</fullName>
        <label>Number_02</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>apsona__String_00__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>String 00</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apsona__String_01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>String 01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apsona__String_02__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>String 02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apsona_dedup__Dedup_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedup Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Apsona item</label>
    <listViews>
        <fullName>apsona__All</fullName>
        <columns>NAME</columns>
        <columns>apsona__Content__c</columns>
        <columns>apsona__Description__c</columns>
        <columns>apsona__Entity_name__c</columns>
        <columns>apsona__Item_type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apsona items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>